Bug 44836 - Leaking page breaks ...
Summary: Leaking page breaks ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Master old -3.6
Hardware: Other All
: medium critical
Assignee: Not Assigned
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-16 08:54 UTC by Michael Meeks
Modified: 2012-01-31 06:41 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
two leaked one one real break in a pretty picture ... (103.09 KB, image/png)
2012-01-16 08:54 UTC, Michael Meeks
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Meeks 2012-01-16 08:54:37 UTC
Created attachment 55645 [details]
two leaked one one real break in a pretty picture ...

I'm using master with git hash:

commit e770d5300054d56545bba3c16635a14e92fde807
Author: Stephan Bergmann <sbergman@redhat.com>
Date:   Mon Jan 16 16:01:25 2012 +0100

    Fix #ifdef SAL_LOG_INFO region.

And I get page breaks leaking around the place. To reproduce it is reasonably hard.

I create a new document - no point in one that already exists; I enter alternative blocks of:

"Jimbob
Hello There

"

And add a lot of ctrl-enters down the page; interspersed with blocks of this stuff.

Then I come back up the page and edit in the middle. I do a certain amount of page/up/page-down suddenly while doing that.

It is -possible- that this happens when the header/footer bar is highlighted / selected and fading in and out an I move.

Nevertheless - while potentially nasty to reproduce, I've seen this many times while manually editing :-) It'd be great to get some simpler steps I guess ...
Comment 1 Petr Mladek 2012-01-23 10:47:11 UTC
I add Kendy into CC because he played with the header/footer stuff as well.

Unfortunately, I am unable to reproduce it here :-(

I wonder if the strange lines are only in memory or even in the document. Michael, what happens when you save and reload the document?
Comment 2 Petr Mladek 2012-01-23 11:09:30 UTC
I wonder if it is somehow related to the bug 45141. There are some problems to draw the page break...
Comment 3 Yifan Jiang 2012-01-29 22:46:14 UTC
I tried in 2 machines, found this might be working to reproduce:

1. Create a new document

2. Insert a manual page breaker in the first page

3. Insert a manual page breaker in the second page

4. Insert a manual page breaker in the third page

Now we got 4 pages ( the last one appended by libreoffice automatically when adding page breaker)

The magic begin when the page numbers go beyond 4.

5. Ctrl+Home to go to the beginning of the document

6. Ctrl+End to go to the the beginning of the last page

7. Page down (or scroll mouse down)

=> A strange page breaker line located right in the middle of the last page. It seems not inside the document, hover on line will diminish it. However repeating from step 5 can bring it back again always.
Comment 4 Cédric Bosdonnat 2012-01-31 06:41:42 UTC
Fixed in master by this commit:
http://cgit.freedesktop.org/libreoffice/core/commit/?id=9babbf346c4d6f76e8b3a243a00e73a173c16ba6