fdo#44836: Hide all the page breaks of the pages before the first visible one

Signed-off-by: Petr Mladek <pmladek@suse.cz>